--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
   "name": "react-download-android",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Google Play Store download badge as a React component",
   "main": "build/index.js",
   "repository": {
@@ -14,7 +14,7 @@
     "download",
     "badge"
   ],
-  "author": "Petrofeed Inc",
+  "author": "Olivier Wietrich",
   "license": "MIT",
   "browserify": {
     "transform": [
